lang/tests/compile_fail/duplicate_instruction_macro_arg.stderr
error: duplicate `discriminator`
  --> tests/compile_fail/duplicate_instruction_macro_arg.rs:11:38
   |
11 |     #[instruction(discriminator = 1, discriminator = 2)]
   |                                      ^^^^^^^^^^^^^
